<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tworld.tviewing.home.HomeFragment">

    <FrameLayout
        android:id="@+id/home_frame"
        android:background="@color/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/textView"
                android:layout_margin="@dimen/row_margin"
                android:textSize="@dimen/title_text"
                android:textColor="@color/text_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/popular_video_entertainment"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/home_recyclerView_24"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:scrollbars="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />
            <TextView
                android:id="@+id/textView_game"
                android:layout_margin="@dimen/row_margin"
                android:textSize="@dimen/title_text"
                android:textColor="@color/text_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/popular_video_game"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/home_recyclerView_24" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/home_recyclerView_20"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:scrollbars="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_game" />

            <TextView
                android:id="@+id/textView_news"
                android:layout_margin="@dimen/row_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/popular_video_news"
                android:textColor="@color/text_color"
                android:textSize="@dimen/title_text"
                app:layout_constraintTop_toBottomOf="@+id/home_recyclerView_20"
                app:layout_constraintEnd_toEndOf="@+id/textView"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/home_recyclerView_25"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:scrollbars="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_news" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</FrameLayout>